# pycinc

./: .gitignore  README.html  README.md  demo.py  pyproject.toml  requirements.txt  setup.py
examples/: advanced.py  advanced_usage.py  basic.py  basic_example.py  basic_usage.py  heterogeneous_effects.py
pycic/: __init__.py  cic.py  results.py
pycinc/: __init__.py  cic.py  results.py
tests/: test_cic.py
